--- a/apps/mini-app/components/org-structure/org-structure.wxml
+++ b/apps/mini-app/components/org-structure/org-structure.wxml
@@ -90,7 +90,13 @@
                     data-roleid="{{node1.roleOrId || node1.roleId || node1.id}}"
                     data-memberid="{{member.wxId || member.id || member.userId}}"
                   >{{member.username || '匿名用户'}}</text>
-                  <text wx:else class="org-member-name">{{member.username || '匿名用户'}}</text>
+                  <text 
+                    wx:else 
+                    class="org-member-name clickable" 
+                    bindtap="onMemberClick" 
+                    data-wxid="{{member.wxId}}" 
+                    data-username="{{member.username || '匿名用户'}}"
+                  >{{member.username || '匿名用户'}}</text>
                   <text wx:if="{{member.roleName}}" class="org-member-role">{{member.roleName}}</text>
                 </view>
               </view>
@@ -208,13 +214,19 @@
                       <!-- 非编辑模式或非编辑状态：显示文本 -->
                       <view wx:else class="member-name-role">
                         <text 
-                          wx:if="{{isEditMode && isLocalPlatform && canEdit && !member.isTemp}}" 
-                          class="org-member-name edit-clickable" 
-                          bindtap="onStartEditMember"
+                        wx:if="{{isEditMode && isLocalPlatform && canEdit && !member.isTemp}}" 
+                        class="org-member-name edit-clickable" 
+                        bindtap="onStartEditMember"
                     data-roleid="{{node2.roleOrId || node2.roleId || node2.id}}"
                     data-memberid="{{member.wxId || member.id || member.userId}}"
-                        >{{member.username || '匿名用户'}}</text>
-                        <text wx:else class="org-member-name">{{member.username || '匿名用户'}}</text>
+                      >{{member.username || '匿名用户'}}</text>
+                      <text 
+                        wx:else 
+                        class="org-member-name clickable" 
+                        bindtap="onMemberClick" 
+                        data-wxid="{{member.wxId}}" 
+                        data-username="{{member.username || '匿名用户'}}"
+                      >{{member.username || '匿名用户'}}</text>
                         <text wx:if="{{member.roleName}}" class="org-member-role">{{member.roleName}}</text>
                       </view>
                     </view>
@@ -332,13 +344,19 @@
                             <!-- 非编辑模式或非编辑状态：显示文本 -->
                             <view wx:else class="member-name-role">
                               <text 
-                                wx:if="{{isEditMode && isLocalPlatform && canEdit && !member.isTemp}}" 
-                                class="org-member-name edit-clickable" 
-                                bindtap="onStartEditMember"
+                              wx:if="{{isEditMode && isLocalPlatform && canEdit && !member.isTemp}}" 
+                              class="org-member-name edit-clickable" 
+                              bindtap="onStartEditMember"
                     data-roleid="{{node3.roleOrId || node3.roleId || node3.id}}"
                     data-memberid="{{member.wxId || member.id || member.userId}}"
                               >{{member.username || '匿名用户'}}</text>
-                              <text wx:else class="org-member-name">{{member.username || '匿名用户'}}</text>
+                              <text 
+                                wx:else 
+                                class="org-member-name clickable" 
+                                bindtap="onMemberClick" 
+                                data-wxid="{{member.wxId}}" 
+                                data-username="{{member.username || '匿名用户'}}"
+                              >{{member.username || '匿名用户'}}</text>
                               <text wx:if="{{member.roleName}}" class="org-member-role">{{member.roleName}}</text>
                             </view>
                           </view>
