When a new user enters the pages/profile/profile page and there is no profile picture, the page is blank. Similarly, when a new user enters the pages/profile/edit/edit page and there is no profile picture, the page is completely blank.

--- a/apps/mini-app/pages/profile/edit/edit.wxml
+++ b/apps/mini-app/pages/profile/edit/edit.wxml
@@ -7,7 +7,7 @@
     <scroll-view scroll-y class="form-scroll">
       <view class="avatar-card card">
         <view class="avatar-wrap" bindtap="chooseAvatar">
-          <image class="avatar" src="{{form.avatarUrl}}" mode="aspectFill" />
+          <image class="avatar" src="{{form.avatarUrl || defaultAvatar}}" mode="aspectFill" />
           <view class="avatar-mask">
             <text>更换头像</text>
           </view>
