--- a/apps/mini-app/pages/alumni-association/member/member.wxml
+++ b/apps/mini-app/pages/alumni-association/member/member.wxml
@@ -26,7 +26,7 @@
         <view class="member-item" wx:for="{{memberList}}" wx:key="wxId">
           <view class="member-item-left">
             <view class="member-avatar">
-              <image class="avatar-img" src="{{item.avatarUrl || 'https://${API_DOMAIN}/upload/images/assets/images/avatar.png'}}"></image>
+              <image class="avatar-img" src="{{item.avatarUrl || defaultUserAvatarUrl}}"></image>
             </view>
             <view class="member-text-group">
               <text class="member-name">{{item.name || item.nickname || '未命名'}}</text>
@@ -98,7 +98,7 @@
           <scroll-view scroll-y class="alumni-search-dropdown" show-scrollbar="{{false}}" wx:if="{{showAlumniSearchResults && alumniSearchResults.length > 0}}">
             <view wx:for="{{alumniSearchResults}}" wx:key="userId" class="alumni-search-item" bindtap="selectAlumni" data-index="{{index}}">
               <image wx:if="{{item.avatarUrl}}" src="{{item.avatarUrl}}" class="alumni-avatar" mode="aspectFill" />
-              <image wx:else src="https://${API_DOMAIN}/upload/images/assets/images/avatar.png" class="alumni-avatar" mode="aspectFill" />
+              <image wx:else src="{{defaultUserAvatarUrl}}" class="alumni-avatar" mode="aspectFill" />
               <view class="alumni-item-info">
                 <text class="alumni-item-name">{{item.name || item.nickname || item.realName}}</text>
                 <text class="alumni-item-school">{{item.school || '暂无学校信息'}}</text>
@@ -135,7 +135,7 @@
         <view class="form-item">
           <text class="label">成员姓名</text>
           <view class="member-info-display">
-            <image class="avatar-small" src="{{editingMember.avatarUrl || 'https://${API_DOMAIN}/upload/images/assets/images/avatar.png'}}"></image>
+            <image class="avatar-small" src="{{editingMember.avatarUrl || defaultUserAvatarUrl}}"></image>
             <text class="member-name-display">{{editingMember.name || editingMember.nickname || '未命名'}}</text>
           </view>
         </view>
