--- a/apps/mini-app/pages/alumni-association/apply/apply.wxml
+++ b/apps/mini-app/pages/alumni-association/apply/apply.wxml
@@ -1,7 +1,7 @@
 <custom-nav-bar useAuditStyle="{{true}}" auditTitle="申请加入校友会" showBack="{{true}}">
   <view class="white-background-content">
     <view class="container" bindtap="closeAllDropdowns">
-  <image src="https://${API_DOMAIN}/upload/images/2026/02/09/9f328fe3-fcad-4019-a379-1a6db70f3a5d.png" class="header-image" mode="aspectFit"></image>
+  <image src="{{headerImageUrl}}" class="header-image" mode="aspectFit"></image>
 
     <!-- 基本信息 -->
     <view class="form-section">
