--- a/apps/mini-app/pages/merchant/list/list.wxml
+++ b/apps/mini-app/pages/merchant/list/list.wxml
@@ -9,7 +9,7 @@
   <custom-nav-bar showBack="{{true}}" backgroundColor="#3F61CA" showImage="{{false}}"></custom-nav-bar>
   <!-- 顶部图片 -->
   <view class="top-image-container">
-    <image class="top-image" src="https://${API_DOMAIN}/upload/images/2026/02/09/ec78b300-ab01-470d-a504-97eb149caf24.png" mode="aspectFit" />
+    <image class="top-image" src="{{topImageUrl}}" mode="aspectFit" />
   </view>
   
   <!-- 搜索栏和筛选条件容器 -->
