The number of alumni in the alumni list has increased, and the alumni list can be filtered by registration time.

--- a/apps/mini-app/pages/alumni-association/list/list.wxss
+++ b/apps/mini-app/pages/alumni-association/list/list.wxss
@@ -369,7 +369,7 @@ view, text, picker, input, button, image, navigator {
 .meta-row {
   display: flex;
   align-items: center;
-  gap: 16rpx;
+  gap: 12rpx;
   margin-bottom: 12rpx;
   width: 100%;
   overflow: hidden;
@@ -392,6 +392,10 @@ view, text, picker, input, button, image, navigator {
 
 .location-item {
   flex: 0.8;
+}
+
+.member-count-item {
+  margin-left: -5rpx;
 }
 
 .truncate {
