--- a/apps/mini-app/pages/alumni-association/list/list.wxml
+++ b/apps/mini-app/pages/alumni-association/list/list.wxml
@@ -71,8 +71,16 @@
             </view>
           </view>
 
-          <!-- 关注和加入按钮在城市和地点下面一行展示 -->
-          <view class="action-row">
+          <!-- 人数信息在学校和地点下面一行展示 -->
+          <view class="meta-row">
+            <view wx:if="{{item.memberCount > 0}}" class="meta-item">
+              <image class="location-icon" src="{{iconPeople}}" mode="aspectFit" />
+              <text>{{item.memberCount}}人</text>
+            </view>
+          </view>
+
+          <!-- 关注和加入按钮在人数信息下面一行展示 -->
+          <view class="action-row" style="margin-top: 20rpx;">
             <view class="card-action" catchtap="toggleFollow" data-id="{{item.id}}" data-followed="{{item.isFollowed}}">
               <view class="follow-btn {{item.isFollowed ? 'followed' : ''}}">
                 {{item.isFollowed ? '已关注' : '+ 关注'}}
@@ -98,7 +106,6 @@
         <view class="card-stats">
           <text wx:if="{{item.associationCount > 0}}" class="stat-item">校友会 {{item.associationCount}}</text>
           <text wx:if="{{item.followCount > 0}}" class="stat-item">关注 {{item.followCount}}</text>
-          <text wx:if="{{item.memberCount > 0}}" class="stat-item">会员 {{item.memberCount}}</text>
           <text wx:if="{{item.createTime}}" class="stat-item">注册时间 {{item.createTime}}</text>
         </view>
       </view>
