--- a/apps/mini-app/pages/alumni-association/detail/detail.wxml
+++ b/apps/mini-app/pages/alumni-association/detail/detail.wxml
@@ -131,7 +131,7 @@
           </view>
 
           <!-- 附近权益列表 -->
-          <view class="card mt-20 dashboard-card">
+          <!-- <view class="card mt-20 dashboard-card">
             <view class="section-header">
               <view class="section-title">
                 <view class="text-bold">附近权益</view>
@@ -160,10 +160,10 @@
                 </view>
               </view>
             </view>
-          </view>
+          </view> -->
 
           <!-- 校友企业列表 -->
-          <view class="card mt-20 dashboard-card">
+          <!-- <view class="card mt-20 dashboard-card">
             <view class="section-header">
               <view class="section-title">
                 <view class="text-bold">校友企业</view>
@@ -189,10 +189,10 @@
                 </view>
               </view>
             </view>
-          </view>
+          </view> -->
 
           <!-- 校友商铺列表 -->
-          <view class="card mt-20 dashboard-card">
+          <!-- <view class="card mt-20 dashboard-card">
             <view class="section-header">
               <view class="section-title">
                 <view class="text-bold">校友商铺</view>
@@ -221,7 +221,7 @@
                 </view>
               </view>
             </view>
-          </view>
+          </view> -->
         </view>
 
         <!-- 组织结构标签页 -->
