--- a/apps/mini-app/pages/audit/article/manage/manage.wxss
+++ b/apps/mini-app/pages/audit/article/manage/manage.wxss
@@ -141,6 +141,8 @@
 .edit-action {
   width: 100%;
   margin-top: 16rpx;
+  display: flex;
+  gap: 20rpx;
 }
 
 .edit-btn-wrapper {
@@ -160,6 +162,31 @@
   height: 29rpx;
   overflow-wrap: break-word;
   color: rgba(67,100,204,1);
+  font-size: 22rpx;
+  font-family: PingFangSC-Semibold;
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  line-height: 29rpx;
+}
+
+.delete-btn-wrapper {
+  background-color: rgba(255,255,255,1.000000);
+  border-radius: 18rpx;
+  height: 54rpx;
+  border: 1px solid rgba(255,77,79,1);
+  display: flex;
+  flex-direction: column;
+  width: 145rpx;
+  align-items: center;
+  justify-content: center;
+}
+
+.delete-btn-text {
+  width: 45rpx;
+  height: 29rpx;
+  overflow-wrap: break-word;
+  color: rgba(255,77,79,1);
   font-size: 22rpx;
   font-family: PingFangSC-Semibold;
   font-weight: 600;
